modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -25,27 +25,31 @@
                     <h2>Me Chamo Warley, estou cursando ADS<br> e estou me tornando um dev Full-Stack</h2>
                 </div>
 
-                <div class="cardcodigo">
-                    <div class="tools">
-                        <div class="circulo">
-                            <span class="red box"></span>
+                <div class="espacoCodio">
+
+                    <div class="cardcodigo">
+                        <div class="tools">
+                            <div class="circulo">
+                                <span class="red box"></span>
+                            </div>
+                            <div class="circulo">
+                                <span class="yellow box"></span>
+                            </div>
+                            <div class="circulo">
+                                <span class="green box"></span>
+                            </div>
                         </div>
-                        <div class="circulo">
-                            <span class="yellow box"></span>
-                        </div>
-                        <div class="circulo">
-                            <span class="green box"></span>
-                        </div>
-                    </div>
-                    <div class="card__content">
-                        <pre><br>public class Hello {
-    public static void main(String[] args) {
-        System.out.println("Hello, World");
+                        <div class="card__content">
+                            <pre>public class Hello {
+        public static void main(String[] args) {
+            System.out.println("Hello, World");
+        }
     }
-}
-           
-                        </pre>
+               
+                            </pre>
+                        </div>
                     </div>
+
                 </div>
 
 
