new file:   assets/uniasselvi.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
                         <p>Full-Stack Developer</p>
                         <p>Junior</p>
                     </div>
-                    <h1>Hello, world!</h1>
-                    <h2>Me Chamo Warley, estou cursando ADS<br> e estou me tornando um dev Full-Stack</h2>
+                    <h1 class="homeH1">Hello, world!</h1>
+                    <h2 class="homeH2">Me Chamo Warley, estou cursando ADS<br> e estou me tornando um dev Full-Stack
+                    </h2>
                 </div>
 
                 <div class="espacoCodio">
@@ -71,7 +72,42 @@
             </div>
 
         </div>
-        <div class="skills"></div>
+        <div class="academic">
+
+            <div class="AcademyCentro">
+                <div class="conteudoCentro">
+
+                    <div class="BoxImagem">
+                        <img class="logoUniasselvi" src="/assets/uniasselvi.png" alt="Logo da universidade Uniasselvi">
+                    </div>
+
+                    <div class="textosAcademicCentro">
+                        <h3 class="H3Academic">Graduação</h3>
+                        <p class="PreAcademic">Instituição: Uniasselvi <br>
+                            Curso: Análise e Desenvolvimeto de Sistemas <br>
+                            Modalidade: EAD <br>
+                            Previsão de Formatura: 12/2024
+                        </p>
+                    </div>
+                
+                </div>
+                <div class="barraDeProgresso">
+                    <div>
+
+                    </div>
+                    <progress class="progress-bar" max="100" value="65"> 66%</progress>
+                    <div class="porcen">66%</div>
+                </div>
+            </div>
+
+            <div class="ladoEsquerdo">
+
+            </div>
+            <div class="ladoDireito">
+
+            </div>
+
+        </div>
         <div class="repositorios"></div>
         <div class="contatos"></div>
         <footer class="footer"></footer>
