modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -160,19 +160,19 @@
             <div class="cardsGH">
 
                 <a href="https://github.com/Frraz/DowloadPlaylistYouTube" class="cardPort" target="_blank">
-                    <img class="imgPort" src="/assets/repositorio1.png" alt="">
+                    <img class="imgPort" src="assets/repositorio1.png" alt="">
                 </a>
 
                 <a href="https://github.com/Frraz/Download-PDFs-Python" class="cardPort" target="_blank">
-                    <img class="imgPort" src="/assets/repositorio2.png" alt="">
+                    <img class="imgPort" src="assets/repositorio2.png" alt="">
                 </a>
 
                 <a href="https://github.com/Frraz/Portifolio" class="cardPort" target="_blank">
-                    <img class="imgPort" src="/assets/repositorio3.png" alt="">
+                    <img class="imgPort" src="assets/repositorio3.png" alt="">
                 </a>
 
                 <a href="https://github.com/Frraz/Subtracao-de-percentual" class="cardPort" target="_blank">
-                    <img class="imgPort" src="/assets/repositorio4.png" alt="">
+                    <img class="imgPort" src="assets/repositorio4.png" alt="">
                 </a>
 
             </div>
