new file:   assets/academic.png 	new file:   assets/contatos.png 	new file:   assets/home.png 	new file:   assets/repositoriologo.png 	modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -12,10 +12,22 @@
 
     <div id="root">
         <header class="cabecalho">
-            <a href="#home">home</a>
-            <a href="#academic">academic</a>
-            <a href="#repositorios">repositorios</a>
-            <a href="#contatos">contatos</a>
+
+            <a href="#home" class="logoNav">
+                <img src="assets/home.png" alt="" width="50px">
+            </a>
+
+            <a href="#academic" class="logoNav">
+                <img src="/assets/academic.png" alt="" width="50px">
+            </a>
+
+            <a href="#repositorios" class="logoNav">
+                <img src="/assets/repositoriologo.png" alt="" width="50px">
+            </a>
+
+            <a href="#contatos" class="logoNav">
+                <img src="/assets/contatos.png" alt="" width="50px">
+            </a>
         </header>
 
 
